--- a/config.env
+++ b/config.env
@@ -1,19 +1,19 @@
 # Bot Configs
 API_ID="27704224"
 API_HASH="c2e33826d757fe113bc154fcfabc987d"
-BOT_TOKEN="7819249411:AAF_4MkQeuDFz-UsehhCrBy-DoMNkKaYYEk"
+BOT_TOKEN="7625600338:AAEAhK3xho1gBi4BfwncPzNiqRsgcb97MnM"
 
 # Database ( Mandatory )
-MONGO_URI="mongodb+srv://Test:aloksingh@test.hk9fium.mongodb.net/?retryWrites=true&w=majority&appName=Test"
+MONGO_URI="mongodb+srv://Koi:aloksingh@cluster0.86wo9.mongodb.net/?retryWrites=true&w=majority"
 
 # Channels Configs
 FSUB_CHATS="" # Multiple Separated By Space ( Optional ) ( Upto 80 )
 BACKUP_CHANNEL="" # Multiple Separated By Space ( Optional )
-MAIN_CHANNEL="-1002555545587"
+MAIN_CHANNEL="-1002585643417"
 LOG_CHANNEL="-1002669902570" # ( Optional )
 FILE_STORE="-1002392729611"
-OWNER=Mikoyae756
-OWNER_ID=7970350353
+OWNER=Yae_X_Miko
+OWNER_ID=8108281129
 
 
 # Bot Settings
@@ -23,13 +23,13 @@ BRAND_UNAME="@TeamWarlords" # Username of Channel with @ or Text as Footer of Ev
 FFCODE_Hdrip = "ffmpeg -i '{}' -progress '{}' -map 0:v -map 0:a:0 -map 0:a:1? -map 0:s -c copy -metadata title='Team Warlords' -metadata:s:v title='Team Warlords' -metadata:s:a title='Team Warlords' -metadata:s:s title='Team Warlords' '{}' -y"
 FFCODE_1080 = "ffmpeg -i '{}' -progress '{}' -nostats -loglevel warning -map 0:v -map 0:a -map 0:s? -c:v libx264 -crf 24.5 -pix_fmt yuv420p -tune animation -s 1920x1080 -c:a libopus -b:a 128k -ac 2 -c:s copy -preset medium -threads 0 -metadata title='TeamWarlords' -metadata:s:v title='TeamWarlords' -metadata:s:a title='TeamWarlords' -metadata:s:s title='TeamWarlords' -movflags +faststart '{}' -y"
 FFCODE_720 = "ffmpeg -i '{}' -progress '{}' -nostats -loglevel warning -map 0:v -map 0:a -map 0:s? -c:v libx264 -crf 27 -pix_fmt yuv420p -tune animation -s 1280x720 -c:a libopus -b:a 96k -ac 2 -c:s copy -preset fast -threads 0 -metadata title='TeamWarlords' -metadata:s:v title='TeamWarlords' -metadata:s:a title='TeamWarlords' -metadata:s:s title='TeamWarlords' -movflags +faststart '{}' -y"
-FFCODE_480 = "ffmpeg -i '{}' -progress '{}' -nostats -loglevel warning -map 0:v -map 0:a -map 0:s? -c:v libx265 -crf 30 -pix_fmt yuv420p -tune animation -s 854x480 -c:a libopus -b:a 48k -ac 2 -c:s copy -preset ultrafast -threads 0 -metadata title='TeamWarlords' -metadata:s:v title='TeamWarlords' -metadata:s:a title='TeamWarlords' -metadata:s:s title='TeamWarlords' -movflags +faststart '{}' -y"
+FFCODE_480 = "ffmpeg -i '{}' -progress '{}' -nostats -loglevel warning -map 0:v -map 0:a -map 0:s? -c:v libx264 -crf 31 -pix_fmt yuv420p -tune animation -s 854x480 -c:a libopus -b:a 48k -ac 2 -c:s copy -preset veryfast -threads 0 -metadata title='TeamWarlords' -metadata:s:v title='TeamWarlords' -metadata:s:a title='TeamWarlords' -metadata:s:s title='TeamWarlords' -movflags +faststart '{}' -y"
 # Order of encoding 
 QUALS = "480 720 1080 Hdrip"
 
 # Customisation
 AS_DOC="True"
-THUMB="https://envs.sh/tQ4.bin"
+THUMB="https://telegra.ph/file/375ba16e093f898583dc4-92883200a0b1fb80bf.jpg"
 AUTO_DEL="True"
 DEL_TIMER="600"
 START_PHOTO="https://graph.org/file/aec75539c1c538c90a4fe-93dee125dcc23046ee.jpg"
