--- a/config.env
+++ b/config.env
@@ -29,7 +29,7 @@ QUALS = "480 720 1080 Hdrip"
 
 # Customisation
 AS_DOC="True"
-THUMB="https://telegra.ph/file/2b4c9dd5a202e6d665e48-6ea9305b28f3d53571.jpg"
+THUMB="https://files.catbox.moe/gfhr4u"
 AUTO_DEL="True"
 DEL_TIMER="600"
 START_PHOTO="https://graph.org/file/aec75539c1c538c90a4fe-93dee125dcc23046ee.jpg"
