--- a/config.env
+++ b/config.env
@@ -29,7 +29,7 @@ QUALS = "480 720 1080 Hdrip"
 
 # Customisation
 AS_DOC="True"
-THUMB="https://files.catbox.moe/gfhr4u"
+THUMB="https://telegra.ph/file/c4e683e4778670318b141-5b31dea1ace9b0e433.jpg"
 AUTO_DEL="True"
 DEL_TIMER="600"
 START_PHOTO="https://graph.org/file/aec75539c1c538c90a4fe-93dee125dcc23046ee.jpg"
