--- a/config.env
+++ b/config.env
@@ -23,13 +23,13 @@ BRAND_UNAME="@TeamWarlords" # Username of Channel with @ or Text as Footer of Ev
 FFCODE_Hdrip = "ffmpeg -i '{}' -progress '{}' -map 0:v -map 0:a:0 -map 0:a:1? -map 0:s -c copy -metadata title='Team Warlords' -metadata:s:v title='Team Warlords' -metadata:s:a title='Team Warlords' -metadata:s:s title='Team Warlords' '{}' -y"
 FFCODE_1080 = "ffmpeg -i '{}' -progress '{}' -nostats -loglevel warning -map 0:v -map 0:a -map 0:s? -c:v libx264 -crf 24.5 -pix_fmt yuv420p -tune animation -s 1920x1080 -c:a libopus -b:a 128k -ac 2 -c:s copy -preset medium -threads 0 -metadata title='TeamWarlords' -metadata:s:v title='TeamWarlords' -metadata:s:a title='TeamWarlords' -metadata:s:s title='TeamWarlords' -movflags +faststart '{}' -y"
 FFCODE_720 = "ffmpeg -i '{}' -progress '{}' -nostats -loglevel warning -map 0:v -map 0:a -map 0:s? -c:v libx264 -crf 27 -pix_fmt yuv420p -tune animation -s 1280x720 -c:a libopus -b:a 96k -ac 2 -c:s copy -preset fast -threads 0 -metadata title='TeamWarlords' -metadata:s:v title='TeamWarlords' -metadata:s:a title='TeamWarlords' -metadata:s:s title='TeamWarlords' -movflags +faststart '{}' -y"
-FFCODE_480 = "ffmpeg -i '{}' -progress '{}' -nostats -loglevel warning -map 0:v -map 0:a -map 0:s? -c:v libx264 -crf 31 -pix_fmt yuv420p -tune animation -s 854x480 -c:a libopus -b:a 48k -ac 2 -c:s copy -preset veryfast -threads 0 -metadata title='TeamWarlords' -metadata:s:v title='TeamWarlords' -metadata:s:a title='TeamWarlords' -metadata:s:s title='TeamWarlords' -movflags +faststart '{}' -y"
+FFCODE_480 = "ffmpeg -i '{}' -progress '{}' -nostats -loglevel warning -map 0:v -map 0:a -map 0:s? -c:v libx264 -crf 31 -pix_fmt yuv420p -tune animation -s 854x480 -c:a libopus -b:a 48k -ac 2 -c:s copy -preset fast -threads 0 -metadata title='TeamWarlords' -metadata:s:v title='TeamWarlords' -metadata:s:a title='TeamWarlords' -metadata:s:s title='TeamWarlords' -movflags +faststart '{}' -y"
 # Order of encoding 
 QUALS = "480 720 1080 Hdrip"
 
 # Customisation
 AS_DOC="True"
-THUMB="https://telegra.ph/file/c4e683e4778670318b141-5b31dea1ace9b0e433.jpg"
+THUMB="https://telegra.ph/file/06c4c106919242a6181e8-0d5d2c90148a41018e.jpg"
 AUTO_DEL="True"
 DEL_TIMER="600"
 START_PHOTO="https://graph.org/file/aec75539c1c538c90a4fe-93dee125dcc23046ee.jpg"
