--- a/config.env
+++ b/config.env
@@ -29,7 +29,7 @@ QUALS = "480 720 1080 Hdrip"
 
 # Customisation
 AS_DOC="True"
-THUMB="https://telegra.ph/file/13ac7caf65080cef727bf-8aefd288c52c9bbd60.jpg"
+THUMB="https://graph.org/file/248046227cc2cf281f511-442676606817d86414.jpg"
 AUTO_DEL="True"
 DEL_TIMER="600"
 START_PHOTO="https://graph.org/file/aec75539c1c538c90a4fe-93dee125dcc23046ee.jpg"
