--- a/config.env
+++ b/config.env
@@ -20,12 +20,16 @@ OWNER_ID=8108281129
 RSS_ITEMS=""
 SEND_SCHEDULE="True"
 BRAND_UNAME="@TeamWarlords" # Username of Channel with @ or Text as Footer of Every Post
-FFCODE_Hdrip = "ffmpeg -i '{}' -progress '{}' -map 0:v -map 0:a:0 -map 0:a:1? -map 0:s -c copy -metadata title='Team Warlords' -metadata:s:v title='Team Warlords' -metadata:s:a title='Team Warlords' -metadata:s:s title='Team Warlords' '{}' -y"
-FFCODE_1080 = "ffmpeg -i '{}' -progress '{}' -nostats -loglevel warning -map 0:v -map 0:a -map 0:s? -c:v libx264 -crf 24.5 -pix_fmt yuv420p -tune animation -s 1920x1080 -c:a libopus -b:a 128k -ac 2 -c:s copy -preset medium -threads 0 -metadata title='TeamWarlords' -metadata:s:v title='TeamWarlords' -metadata:s:a title='TeamWarlords' -metadata:s:s title='TeamWarlords' -movflags +faststart '{}' -y"
-FFCODE_720 = "ffmpeg -i '{}' -progress '{}' -nostats -loglevel warning -map 0:v -map 0:a -map 0:s? -c:v libx264 -crf 27 -pix_fmt yuv420p -tune animation -s 1280x720 -c:a libopus -b:a 96k -ac 2 -c:s copy -preset fast -threads 0 -metadata title='TeamWarlords' -metadata:s:v title='TeamWarlords' -metadata:s:a title='TeamWarlords' -metadata:s:s title='TeamWarlords' -movflags +faststart '{}' -y"
-FFCODE_480 = "ffmpeg -i '{}' -progress '{}' -nostats -loglevel warning -map 0:v -map 0:a -map 0:s? -c:v libx264 -crf 31 -pix_fmt yuv420p -tune animation -s 854x480 -c:a libopus -b:a 48k -ac 2 -c:s copy -preset fast -threads 0 -metadata title='TeamWarlords' -metadata:s:v title='TeamWarlords' -metadata:s:a title='TeamWarlords' -metadata:s:s title='TeamWarlords' -movflags +faststart '{}' -y"
-# Order of encoding 
-QUALS = "480 720 1080 Hdrip"
+
+FFCODE_Hdrip = "ffmpeg -i '{}' -progress '{}' -map 0:v -map 0:a:0 -map 0:a:1? -map 0:s -c copy -metadata title='TeamWarlords' -metadata:s:v title='TeamWarlords' -metadata:s:a title='TeamWarlords' -metadata:s:s title='TeamWarlords' '{}' -y"
+
+FFCODE_1080 = 'ffmpeg -i "{}" -progress "{}" -nostats -loglevel warning -map 0 -c:v libx264 -pix_fmt yuv420p -vf "scale=1920:1080:flags=lanczos" -crf 26 -preset veryfast -tune animation -c:a libopus -b:a 128k -ac 2 -c:s copy -metadata title="TeamWarlords" -metadata artist="TeamWarlords" -metadata album="Anime Encode Collection" -metadata genre="Anime" -metadata comment="Encoded with TeamWarlords presets" -metadata encoder="libx264 + libopus" -metadata:s:v title="TeamWarlords" -metadata:s:a title="TeamWarlords" -metadata:s:s title="TeamWarlords" -movflags +faststart "{}" -y'
+
+FFCODE_720 = 'ffmpeg -i "{}" -progress "{}" -nostats -loglevel warning -map 0 -c:v libx264 -pix_fmt yuv420p -vf "scale=1280:720:flags=lanczos" -crf 26 -preset veryfast -tune animation -c:a libopus -b:a 96k -ac 2 -c:s copy -metadata title="TeamWarlords" -metadata artist="TeamWarlords" -metadata album="Anime Encode Collection" -metadata genre="Anime" -metadata comment="Encoded with TeamWarlords presets" -metadata encoder="libx264 + libopus" -metadata:s:v title="TeamWarlords" -metadata:s:a title="TeamWarlords" -metadata:s:s title="TeamWarlords" -movflags +faststart "{}" -y'
+
+FFCODE_480 = 'ffmpeg -i "{}" -progress "{}" -nostats -loglevel warning -map 0 -c:v libx264 -pix_fmt yuv420p -vf "scale=854:480:flags=lanczos" -crf 30 -preset veryfast -tune animation -c:a libopus -b:a 64k -ac 2 -c:s copy -metadata title="TeamWarlords" -metadata artist="TeamWarlords" -metadata album="Anime Encode Collection" -metadata genre="Anime" -metadata comment="Encoded with TeamWarlords presets" -metadata encoder="libx264 + libopus" -metadata:s:v title="TeamWarlords" -metadata:s:a title="TeamWarlords" -metadata:s:s title="TeamWarlords" -movflags +faststart "{}" -y'
+
+QUALS = "480 720 1080 Hdrip" # Order of encoding 
 
 # Customisation
 AS_DOC="True"
