--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 # Bot Configs
 API_ID="27704224"
 API_HASH="c2e33826d757fe113bc154fcfabc987d"
-BOT_TOKEN="8241756077:AAGEOg1CDchMyDppgtpD5UpEJPbtfdKYmuA"
+BOT_TOKEN="7625600338:AAFaskZ9c3fcpqN6-8YF6iy12ueQkW-jhxM"
 
 # Database ( Mandatory )
 MONGO_URI="mongodb+srv://Koi:aloksingh@cluster0.86wo9.mongodb.net/?retryWrites=true&w=majority"
@@ -9,11 +9,11 @@ MONGO_URI="mongodb+srv://Koi:aloksingh@cluster0.86wo9.mongodb.net/?retryWrites=t
 # Channels Configs
 FSUB_CHATS="" # Multiple Separated By Space ( Optional ) ( Upto 80 )
 BACKUP_CHANNEL="" # Multiple Separated By Space ( Optional )
-MAIN_CHANNEL="-1002555545587"
-LOG_CHANNEL="-1002669902570" # ( Optional )
-FILE_STORE="-1002583602391"
-OWNER=Mikoyae756
-OWNER_ID=7970350353
+MAIN_CHANNEL="-1002585643417"
+LOG_CHANNEL="-1003089985542" # ( Optional )
+FILE_STORE="-1002392729611"
+OWNER=Yae_X_Miko
+OWNER_ID=8108281129
 
 
 # Bot Settings
@@ -33,7 +33,7 @@ QUALS = "480 720 1080 Hdrip" # Order of encoding
 
 # Customisation
 AS_DOC="True"
-THUMB="https://graph.org/file/af4055e2779b42d2fdd6f-40dc604212f24e16e6.jpg"
+THUMB="https://graph.org/file/4c7b972eaa58e6c4207e6-8adff30812e26e1530.jpg"
 AUTO_DEL="True"
 DEL_TIMER="600"
 START_PHOTO="https://graph.org/file/aec75539c1c538c90a4fe-93dee125dcc23046ee.jpg"
