--- a/config.env
+++ b/config.env
@@ -17,7 +17,7 @@ OWNER_ID=8108281129
 
 
 # Bot Settings
-RSS_ITEMS=""
+RSS_ITEMS = "https://nyaa.si/?page=rss&u=Varyg1001&q=Multi-Subs+-Dual-Audio+-Multi-Audio"
 SEND_SCHEDULE="True"
 BRAND_UNAME="@TeamWarlords" # Username of Channel with @ or Text as Footer of Every Post
 
