--- a/config.env
+++ b/config.env
@@ -40,5 +40,5 @@ START_MSG="<b>ʜɪ {first_name} , ᴡᴇʟᴄᴏᴍᴇ ᴛᴏ ᴀᴜᴛᴏ ᴀɴ
 START_BUTTONS="𝗪𝗮𝗿𝗹𝗼𝗿𝗱𝘀|https://t.me/TeamWarlords 𝗦𝘂𝗽𝗽𝗼𝗿𝘁|https://t.me/Warlords_Chat"
 
 # Update 
-UPSTREAM_REPO=""
-UPSTREAM_BRANCH="main"
+UPSTREAM_REPO="https://incredaimaso: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@github.com/MikoxYae/Auto.git"
+UPSTREAM_BRANCH="cev"
