--- a/config.env
+++ b/config.env
@@ -1,19 +1,19 @@
 # Bot Configs
 API_ID="27704224"
 API_HASH="c2e33826d757fe113bc154fcfabc987d"
-BOT_TOKEN="7625600338:AAHuaX30p4jcKxOPVUr2rac64kapTbJzb28"
+BOT_TOKEN="8059125251:AAHIYCgCRp0E-RD46It_FVcAmCnXm2dPyAA"
 
 # Database ( Mandatory )
-MONGO_URI="mongodb+srv://Koi:aloksingh@cluster0.86wo9.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URI="mongodb+srv://Divyanshu:gameno01@cluster0.bcj1u2h.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 
 # Channels Configs
 FSUB_CHATS="" # Multiple Separated By Space ( Optional ) ( Upto 80 )
 BACKUP_CHANNEL="" # Multiple Separated By Space ( Optional )
-MAIN_CHANNEL="-1002585643417"
-LOG_CHANNEL="-1003089985542" # ( Optional )
-FILE_STORE="-1002392729611"
-OWNER=Yae_X_Miko
-OWNER_ID=8108281129
+MAIN_CHANNEL="-1002479735572"
+LOG_CHANNEL="-1002432275758" # ( Optional )
+FILE_STORE="-1002278552053"
+OWNER=LinesOrThreads
+OWNER_ID=7950514048
 
 
 # Bot Settings
@@ -35,8 +35,8 @@ QUALS = "480 720 1080 Hdrip" # Order of encoding
 AS_DOC="True"
 AUTO_DEL="True"
 DEL_TIMER="600"
-START_PHOTO="https://graph.org/file/aec75539c1c538c90a4fe-93dee125dcc23046ee.jpg"
-START_MSG="<b>ʜɪ {first_name} , ᴡᴇʟᴄᴏᴍᴇ ᴛᴏ ᴀᴜᴛᴏ ᴀɴɪᴍᴇ ʙᴏᴛ ᴍᴀᴅᴇ ʙʏ @Yae_x_Miko" # Available Fillings : first_name, last_name, mention, user_id 
+START_PHOTO="https://envs.sh/E72.png?E8krT=1"
+START_MSG="<b>ʜɪ {first_name} , ᴡᴇʟᴄᴏᴍᴇ ᴛᴏ ᴀᴜᴛᴏ ᴀɴɪᴍᴇ ʙᴏᴛ ᴍᴀᴅᴇ ʙʏ @LinesOrThreads" # Available Fillings : first_name, last_name, mention, user_id 
 START_BUTTONS="𝗪𝗮𝗿𝗹𝗼𝗿𝗱𝘀|https://t.me/TeamWarlords 𝗦𝘂𝗽𝗽𝗼𝗿𝘁|https://t.me/Warlords_Chat"
 
 # Update 
