--- a/config.env
+++ b/config.env
@@ -17,7 +17,7 @@ OWNER_ID=7950514048
 
 
 # Bot Settings
-RSS_ITEMS = "https://nyaa.si/?page=rss&u=Varyg1001&q=Dual-Audio https://nyaa.si/?page=rss&u=Varyg1001&q=Multi-Audio"
+RSS_ITEMS = "https://nyaa.si/?page=rss&u=Varyg1001&q=Dual-Audio"
 SEND_SCHEDULE="True"
 BRAND_UNAME="@TeamWarlords" # Username of Channel with @ or Text as Footer of Every Post
 
