--- a/config.env
+++ b/config.env
@@ -21,7 +21,7 @@ RSS_ITEMS="https://nyaa.si/?page=rss&u=Varyg1001&q=Dual-Audio"
 SEND_SCHEDULE="True"
 BRAND_UNAME="@TeamWarlords" # Username of Channel with @ or Text as Footer of Every Post
 
-FFCODE_Hdrip='ffmpeg -i "{}" -progress "{}" -map 0:v -map 0:a:0 -map 0:a:1? -map 0:s -c copy -metadata title="TeamWarlords" -metadata:s:v title="TeamWarlords" -metadata:s:a title="TeamWarlords" -metadata:s:s title="TeamWarlords" "{}" -y'
+FFCODE_Hdri='ffmpeg -i "{}" -progress "{}" -map 0:v -map 0:a:0 -map 0:a:1? -map 0:s -c copy -metadata title="TeamWarlords" -metadata:s:v title="TeamWarlords" -metadata:s:a title="TeamWarlords" -metadata:s:s title="TeamWarlords" "{}" -y'
 
 FFCODE_1080='ffmpeg -i "{}" -progress "{}" -nostats -loglevel warning -map 0 -c:v libx264 -pix_fmt yuv420p -vf "scale=1920:1080:flags=lanczos" -crf 26 -preset veryfast -tune animation -c:a libopus -b:a 128k -ac 2 -c:s copy -metadata title="TeamWarlords" -metadata artist="TeamWarlords" -metadata album="Anime Encode Collection" -metadata genre="Anime" -metadata comment="Encoded with TeamWarlords presets" -metadata encoder="libx264 + libopus" -metadata:s:v title="TeamWarlords" -metadata:s:a title="TeamWarlords" -metadata:s:s title="TeamWarlords" -movflags +faststart "{}" -y'
 
