--- a/config.env
+++ b/config.env
@@ -29,7 +29,7 @@ FFCODE_720='ffmpeg -i "{}" -progress "{}" -nostats -loglevel warning -map 0 -c:v
 
 FFCODE_480='ffmpeg -i "{}" -progress "{}" -nostats -loglevel warning -map 0 -c:v libx264 -pix_fmt yuv420p -vf "scale=854:480:flags=lanczos" -crf 30 -preset veryfast -tune animation -c:a libopus -b:a 64k -ac 2 -c:s copy -metadata title="TeamWarlords" -metadata artist="TeamWarlords" -metadata album="Anime Encode Collection" -metadata genre="Anime" -metadata comment="Encoded with TeamWarlords presets" -metadata encoder="libx264 + libopus" -metadata:s:v title="TeamWarlords" -metadata:s:a title="TeamWarlords" -metadata:s:s title="TeamWarlords" -movflags +faststart "{}" -y'
 
-QUALS="480 720 1080 Hdrip" # Order of encoding 
+QUALS="480 720 1080 Hdri" # Order of encoding 
 
 # Customisation
 AS_DOC="True"
