--- a/config.env
+++ b/config.env
@@ -1,23 +1,23 @@
 # Bot Configs
 API_ID="27704224"
 API_HASH="c2e33826d757fe113bc154fcfabc987d"
-BOT_TOKEN="8085240642:AAGkSk_xiCS4VDF9agZ5jefwVG-asUZTrrw"
+BOT_TOKEN="7625600338:AAHuaX30p4jcKxOPVUr2rac64kapTbJzb28"
 
 # Database ( Mandatory )
-MONGO_URI="mongodb+srv://Divyanshu:gameno01@cluster0.bcj1u2h.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI="mongodb+srv://Koi:aloksingh@cluster0.86wo9.mongodb.net/?retryWrites=true&w=majority"
 
 # Channels Configs
 FSUB_CHATS="" # Multiple Separated By Space ( Optional ) ( Upto 80 )
 BACKUP_CHANNEL="" # Multiple Separated By Space ( Optional )
-MAIN_CHANNEL="-1002613474376"
-LOG_CHANNEL="-1002432275758" # ( Optional )
-FILE_STORE="-1002278552053"
-OWNER=LinesOrThreads
-OWNER_ID=7950514048
+MAIN_CHANNEL="-1002585643417"
+LOG_CHANNEL="-1003089985542" # ( Optional )
+FILE_STORE="-1002392729611"
+OWNER=Yae_X_Miko
+OWNER_ID=8108281129
 
 
 # Bot Settings
-RSS_ITEMS="https://nyaa.si/?page=rss&u=Varyg1001&q=Dual-Audio"
+RSS_ITEMS="https://nyaa.si/?page=rss&u=Varyg1001&q=Multi-Subs+-Dual-Audio+-Multi-Audio"
 SEND_SCHEDULE="True"
 BRAND_UNAME="@TeamWarlords" # Username of Channel with @ or Text as Footer of Every Post
 
@@ -35,10 +35,10 @@ QUALS="480 720 1080 Hdri" # Order of encoding
 AS_DOC="True"
 AUTO_DEL="True"
 DEL_TIMER="600"
-START_PHOTO="https://envs.sh/E72.png?E8krT=1"
-START_MSG="<b>ʜɪ {first_name} , ᴡᴇʟᴄᴏᴍᴇ ᴛᴏ ᴀᴜᴛᴏ ᴀɴɪᴍᴇ ʙᴏᴛ ᴍᴀᴅᴇ ʙʏ @LinesOrThreads" # Available Fillings : first_name, last_name, mention, user_id 
+START_PHOTO="https://graph.org/file/aec75539c1c538c90a4fe-93dee125dcc23046ee.jpg"
+START_MSG="<b>ʜɪ {first_name} , ᴡᴇʟᴄᴏᴍᴇ ᴛᴏ ᴀᴜᴛᴏ ᴀɴɪᴍᴇ ʙᴏᴛ ᴍᴀᴅᴇ ʙʏ @Yae_x_Miko" # Available Fillings : first_name, last_name, mention, user_id 
 START_BUTTONS="𝗪𝗮𝗿𝗹𝗼𝗿𝗱𝘀|https://t.me/TeamWarlords 𝗦𝘂𝗽𝗽𝗼𝗿𝘁|https://t.me/Warlords_Chat"
 
 # Update 
 UPSTREAM_REPO="https://incredaimaso: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@github.com/MikoxYae/Auto.git"
-UPSTREAM_BRANCH="cev"
+UPSTREAM_BRANCH="main"
