--- a/config.env
+++ b/config.env
@@ -1,15 +1,15 @@
 # Bot Configs
 API_ID="27704224"
 API_HASH="c2e33826d757fe113bc154fcfabc987d"
-BOT_TOKEN="7625600338:AAHuaX30p4jcKxOPVUr2rac64kapTbJzb28"
+BOT_TOKEN="8280569014:AAHzlNevLTt2VjTziKcgVDL134iG23_4CpU"
 
 # Database ( Mandatory )
-MONGO_URI="mongodb+srv://Koi:aloksingh@cluster0.86wo9.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URI="mongodb+srv://<db_username>:Aloksingh@miko.yogx28n.mongodb.net/?retryWrites=true&w=majority&appName=Miko"
 
 # Channels Configs
 FSUB_CHATS="" # Multiple Separated By Space ( Optional ) ( Upto 80 )
 BACKUP_CHANNEL="" # Multiple Separated By Space ( Optional )
-MAIN_CHANNEL="-1002585643417"
+MAIN_CHANNEL="-1003173005296"
 LOG_CHANNEL="-1003089985542" # ( Optional )
 FILE_STORE="-1002392729611"
 OWNER=Yae_X_Miko
