--- a/config.env
+++ b/config.env
@@ -1,23 +1,22 @@
 # Bot Configs
 API_ID="27704224"
 API_HASH="c2e33826d757fe113bc154fcfabc987d"
-BOT_TOKEN="8280569014:AAHzlNevLTt2VjTziKcgVDL134iG23_4CpU"
+BOT_TOKEN="7625600338:AAHuaX30p4jcKxOPVUr2rac64kapTbJzb28"
 
 # Database ( Mandatory )
-MONGO_URI="mongodb+srv://<db_username>:Aloksingh@miko.yogx28n.mongodb.net/?retryWrites=true&w=majority&appName=Miko"
+MONGO_URI="mongodb+srv://Koi:aloksingh@cluster0.86wo9.mongodb.net/?retryWrites=true&w=majority"
 
 # Channels Configs
 FSUB_CHATS="" # Multiple Separated By Space ( Optional ) ( Upto 80 )
 BACKUP_CHANNEL="" # Multiple Separated By Space ( Optional )
-MAIN_CHANNEL="-1003173005296"
+MAIN_CHANNEL="-1002585643417"
 LOG_CHANNEL="-1003089985542" # ( Optional )
 FILE_STORE="-1002392729611"
 OWNER=Yae_X_Miko
 OWNER_ID=8108281129
 
-
 # Bot Settings
-RSS_ITEMS="https://nyaa.si/?page=rss&u=Varyg1001&q=Multi-Subs+-Dual-Audio+-Multi-Audio"
+RSS_ITEMS=""
 SEND_SCHEDULE="True"
 BRAND_UNAME="@TeamWarlords" # Username of Channel with @ or Text as Footer of Every Post
 
